--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -24,7 +24,8 @@
 .products-list {
   width: 100%;
   height: 557px;
-  background-color: #f4f5f7;
+  background-color: white;
+  border: 4px solid #f4f5f7;
   border-radius: 32px;
   display: flex;
   flex-direction: row;
@@ -33,6 +34,11 @@
 
 .products {
   margin: 8px;
+
+}
+
+.products:hover {
+  transition: background-color 1s;
 }
 
 .gum-btn {
