--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -56,11 +56,13 @@
     </div>
   </div>
   <div class="spacer"></div>
-  <div class="products-list mt-5 pt-5">
+  <div class="spacer"></div>
+<!-- UI KITS -->
+  <div class="products-list">
     <div class="row center">
       <div class="col">
         <div class="products">
-          <p class="card-link-title">UI Kit 01</p>
+          <p class="card-link-title mb-2">UI Kit 01</p>
           <%= image_tag "kit1.jpg", alt: "alttext", class: 'free-kit-img' %>
           <div class="gum-btn" style="text-align:center;">
             <script src="https://gumroad.com/js/gumroad.js"></script>
@@ -70,8 +72,8 @@
       </div>
       <div class="col">
         <div class="products">
-          <p class="card-link-title">UI Kit 02</p>
-          <%= image_tag "kit1.jpg", alt: "alttext", class: 'free-kit-img' %>
+          <p class="card-link-title mb-2">UI Kit 02</p>
+          <%= image_tag "kit2.jpg", alt: "alttext", class: 'free-kit-img' %>
           <div class="gum-btn" style="text-align:center;">
             <script src="https://gumroad.com/js/gumroad.js"></script>
             <a class="gumroad-button" href="https://gum.co/XiKJl?wanted=true" target="_blank">Download</a>
@@ -80,8 +82,8 @@
       </div>
       <div class="col">
         <div class="products">
-          <p class="card-link-title">UI Kit 03</p>
-          <%= image_tag "kit1.jpg", alt: "alttext", class: 'free-kit-img' %>
+          <p class="card-link-title mb-2">UI Kit 03</p>
+          <%= image_tag "kit3.jpg", alt: "alttext", class: 'free-kit-img' %>
           <div class="gum-btn" style="text-align:center;">
             <script src="https://gumroad.com/js/gumroad.js"></script>
             <a class="gumroad-button" href="https://gum.co/XiKJl?wanted=true" target="_blank">Download</a>
