--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -33,24 +33,24 @@
 <!-- CARTES  -->
     <div class="col-6 mt-4 pt-4">
       <div class="ml-5 mt-5 pl-5">
-        <p class="card-link-title">Dribbble</p>
+        <h3 class="card-link-title">Dribbble</h3>
         <p class="card-link-text mb-2">UX/UI design</p>
         <%= image_tag "block.png", alt: "alttext", class: 'card-link-img' %>
       </div>
       <div class="ml-5 mt-5 pl-5">
-        <p class="card-link-title">Behance</p>
+        <h3 class="card-link-title">Behance</h3>
         <%= image_tag "block.png", alt: "alttext", class: 'card-link-img' %>
       </div>
       <div class="ml-5 mt-5 pl-5">
-        <p class="card-link-title">Unsplash</p>
+        <h3 class="card-link-title">Unsplash</h3>
         <%= image_tag "block.png", alt: "alttext", class: 'card-link-img' %>
       </div>
       <div class="ml-5 mt-5 pl-5">
-        <p class="card-link-title">UpLabs</p>
+        <h3 class="card-link-title">UpLabs</h3>
         <%= image_tag "block.png", alt: "alttext", class: 'card-link-img' %>
       </div>
       <div class="ml-5 mt-5 pl-5">
-        <p class="card-link-title">LinkedIn</p>
+        <h3 class="card-link-title">LinkedIn</p>
         <%= image_tag "block.png", alt: "alttext", class: 'card-link-img' %>
       </div>
     </div>
@@ -62,7 +62,7 @@
     <div class="row center">
       <div class="col">
         <div class="products">
-          <p class="card-link-title mb-2">UI Kit 01</p>
+          <h3 class="card-link-title mb-2">UI Kit 01</h3>
           <%= image_tag "kit1.jpg", alt: "alttext", class: 'free-kit-img' %>
           <div class="gum-btn" style="text-align:center;">
             <script src="https://gumroad.com/js/gumroad.js"></script>
@@ -72,7 +72,7 @@
       </div>
       <div class="col">
         <div class="products">
-          <p class="card-link-title mb-2">UI Kit 02</p>
+          <h3 class="card-link-title mb-2">UI Kit 02</h3>
           <%= image_tag "kit2.jpg", alt: "alttext", class: 'free-kit-img' %>
           <div class="gum-btn" style="text-align:center;">
             <script src="https://gumroad.com/js/gumroad.js"></script>
@@ -82,7 +82,7 @@
       </div>
       <div class="col">
         <div class="products">
-          <p class="card-link-title mb-2">UI Kit 03</p>
+          <h3 class="card-link-title mb-2">UI Kit 03</h3>
           <%= image_tag "kit3.jpg", alt: "alttext", class: 'free-kit-img' %>
           <div class="gum-btn" style="text-align:center;">
             <script src="https://gumroad.com/js/gumroad.js"></script>
