--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,29 +1,6 @@
 <div class="container">
-<!-- TEXTES HEADER -->
-  <div class="row">
-    <div class="col mt-3">
-      <div class="m-4">
-        <p class="top-title">ANTHONY CHOREN</p>
-      </div>
-      <div class="m-5 pt-5">
-        <h1 class="main-title pt-5">
-        Hi there! I'm a digital designer from Bordeaux, France.
-        <br>
-        I enjoy creating bridges between people and technology.
-        </h1>
-      </div>
-    </div>
-  </div>
-<!-- IMAGE HEADER -->
-  <div class="row">
-    <div class="col mt-5 pt-5">
-      <div class="banner mt-5 pt-5">
-        <div class="center">
-          <%= image_tag "banner.png", alt: "Anthony Choren", class: 'banner' %>
-        </div>
-      </div>
-    </div>
-  </div>
+<!-- INTRO -->
+ <%= render "intro" %>
   <div class="row mt-5 pt-5">
     <div class="col-6 mt-5 pt-5">
       <h1>My work</h1>
