--- a/app/views/pages/_freebies.html.erb
+++ b/app/views/pages/_freebies.html.erb
@@ -1,4 +1,7 @@
 <!-- LIENS VERS LES UI KITS GRATUITS -->
+<div class="col-6 mt-5 pt-5">
+  <h1>Freebies</h1>
+</div>
 <div class="products-list">
   <div class="row center">
     <div class="col">
